--- a/src/pages/checkout/checkoutPage.styles.scss
+++ b/src/pages/checkout/checkoutPage.styles.scss
@@ -28,5 +28,17 @@
       margin-left: auto;
       font-size: 36px;
     }
+
+    .test-warning {
+      margin-top: 40px;
+      color: red;
+      font-size: 24px;
+      text-align: center;
+    }
+
+    button{
+      margin-left: auto;
+      margin-top: 10px
+    }
   }
   
